[tool.poetry]
name = "robotframework-jsonlibrary"
version = "1.0.0"
description = "robotframework-jsonlibrary is a Robot Framework test library for manipulating JSON Object. You can manipulate your JSON object using JSONPath or JmesPath"
authors = ["Traitanit Huangsri"]
license = "Unlicensed"
readme = "README.md"
packages = [
    {include = "JSONLibrary"}
]

[tool.poetry.dependencies]
python = ">3.9"
jsonpath-ng = ">=1.4.3"
jsonschema = ">=2.5.1"
robotframework = ">4"


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.6"
black = "^23.9.1"
tox = "^4.11.3"
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
flake8 = "^6.1.0"
invoke = "^2.2.0"
wheel = "^0.41.2"
twine = "^4.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
